--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,5 +6,5 @@
     justify-content: center;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    /* font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif; */
+    text-decoration: underline;
 }
