--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -24,6 +24,10 @@
     margin-right: 20px;
 }
 
+.list-item .complete {
+    text-decoration: line-through;
+}
+
 .list-item .remove { 
     color :red;
     display: flex;
